# protocolos-ssmoc-rag

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  railway.toml
data/chroma_db/009d6ce0-f7f9-4d09-a7ba-27e2b9b8af8f/: index_metadata.pickle
data/chroma_db/9c2b2223-b1c1-406b-9fcc-9da50c223e5d/: index_metadata.pickle
data/parsed/: parsed_documents.json
data/parsed/markdown/: CRITERIOS-DE-REFERENCIA-DIABETES-2017.-ord.md  MANUAL-CONSOLIDADO-PATOLOGIAS-GES-2025.-firmas-1.md  MANUAL-CONSOLIDADO-PATOLOGIAS-GES-2025.-res-1.md  MANUAL-CONSOLIDADO-PATOLOGIAS-GES-V.1-2025.-firmas.md  MANUAL-CONSOLIDADO-PATOLOGIAS-GES-V.1-2025.-res.md  PROT-ALTO-RIESGO-OBSTETRICO-V.1-2025-1.md  PROT-ALTO-RIESGO-OBSTETRICO-V.1-2025-2.md  PROT-AMENORREA-2017.md  PROT-ATENCION-DE-VICTIMAS-DE-VIOLENCIA-SEXUAL-2024.md  PROT-CARDIOLOGIA-ADULTO-V.2-2021-1.md  PROT-CARDIOLOGIA-ADULTO-V.2-2021-2.md  PROT-CATEGORIZACION-DE-PACIENTES-EN-UNIDADES-DE-EMERGENCIA-2018.md  PROT-ENDOCRINO-ADULTO-V.2-2019-1.md  PROT-ENDOCRINO-ADULTO-V.2-2019-2.md  PROT-GASTRO-ADULTO-V.2-2019-1.md  PROT-GASTRO-ADULTO-V.2-2019-2.md  PROT-GENERACION-DE-LA-MACULA-DEL-OJO-2018.md  PROT-GLAUCOMA-2018.md  PROT-HEMATOLOGIA-ADULTO-V.1-2023-1.md  PROT-HEMATOLOGIA-ADULTO-V.1-2023-2.md  PROT-HIPERTIROIDISMO-2017.md  PROT-HOMBRO-DOLOROSO-2018.md  PROT-NEFROLOGIA-ADULTO-V.1-2023-1.md  PROT-NEFROLOGIA-ADULTO-V.1-2023-2.md  (+16 more)
rag/: documents.py  embed.py  generator.py  retriever.py  search.py
scripts/: build_index.py  download_pdfs.py  parse_pdfs.py  test_bm25.py
static/: app.js  index.html  mockup.html  style.css
