[project]
name = "rag-protocolos-referencias-contrarreferencias-cesfam"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "llama-index>=0.14.21",
    "llama-index-embeddings-mistralai>=0.5.1",
    "llama-index-vector-stores-chroma>=0.5.5",
    "llama-cloud>=2.1",
    "mistralai>=2.4.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
