[project]
name = "rag-protocolos-referencias-contrarreferencias-cesfam"
version = "0.1.0"
description = "RAG para protocolos de referencia y contrarreferencia SSMOC"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.0",
    "huggingface-hub>=0.25",
    "mistralai>=2.4.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.45.0",
    "rank-bm25>=0.2.2",
]
